Tuesday morning updated training JSON dataframe

--- a/notebooks/ap_json_clean.ipynb
+++ b/notebooks/ap_json_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "94f341b5-1d3f-48e7-a857-5ab9d2bebe02",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "0a6c0e81-29a0-4027-a854-cc159f933ae4",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "8692e43b-b769-498f-8211-ef15c34fe122",
    "metadata": {},
    "outputs": [
@@ -79,9 +79,6 @@
     "# run a first for loop to get each image from list\n",
     "for image in data:\n",
     "    \n",
-    "    #Populate cells_df dict with path\n",
-    "    cells_df['path'].append(image['image']['pathname'])\n",
-    "    \n",
     "#     run a nested loop withing each image to get the individual object data\n",
     "\n",
     "    #Populate cells_df dict with bounding box data\n",
@@ -97,8 +94,8 @@
     "\n",
     "# create dataframe using pandas  \n",
     "\n",
-    "df = pd.DataFrame(cells_df)\n",
-    "print(df)"
+    "training_json_df = pd.DataFrame(cells_df)\n",
+    "print(training_json_df)\n"
    ]
   },
   {
