--- a/notebooks/ap_json_clean.ipynb
+++ b/notebooks/ap_json_clean.ipynb
@@ -1253,8 +1253,481 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3b7ae375-aae4-42d8-9192-942111299305",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "red blood cell    68931\n",
+       "trophozoite         993\n",
+       "difficult           310\n",
+       "ring                305\n",
+       "gametocyte          107\n",
+       "schizont            105\n",
+       "leukocyte            77\n",
+       "Name: category, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square_enough_and_good_size['category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0bdcf8c9-a3b3-4d75-9f69-af7a4a1f9dc9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>path</th>\n",
+       "      <th>min_r</th>\n",
+       "      <th>min_c</th>\n",
+       "      <th>max_r</th>\n",
+       "      <th>max_c</th>\n",
+       "      <th>r_len</th>\n",
+       "      <th>c_len</th>\n",
+       "      <th>category</th>\n",
+       "      <th>box_area</th>\n",
+       "      <th>c_by_r</th>\n",
+       "      <th>r_by_c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/images/8d02117d-6c71-4e47-b50a-6cc8d5eb1d55.png</td>\n",
+       "      <td>1057</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>1158</td>\n",
+       "      <td>1540</td>\n",
+       "      <td>101</td>\n",
+       "      <td>100</td>\n",
+       "      <td>red blood cell</td>\n",
+       "      <td>10100</td>\n",
+       "      <td>0.990099</td>\n",
+       "      <td>1.010000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/images/8d02117d-6c71-4e47-b50a-6cc8d5eb1d55.png</td>\n",
+       "      <td>868</td>\n",
+       "      <td>1303</td>\n",
+       "      <td>971</td>\n",
+       "      <td>1403</td>\n",
+       "      <td>103</td>\n",
+       "      <td>100</td>\n",
+       "      <td>red blood cell</td>\n",
+       "      <td>10300</td>\n",
+       "      <td>0.970874</td>\n",
+       "      <td>1.030000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/images/8d02117d-6c71-4e47-b50a-6cc8d5eb1d55.png</td>\n",
+       "      <td>578</td>\n",
+       "      <td>900</td>\n",
+       "      <td>689</td>\n",
+       "      <td>1008</td>\n",
+       "      <td>111</td>\n",
+       "      <td>108</td>\n",
+       "      <td>red blood cell</td>\n",
+       "      <td>11988</td>\n",
+       "      <td>0.972973</td>\n",
+       "      <td>1.027778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/images/8d02117d-6c71-4e47-b50a-6cc8d5eb1d55.png</td>\n",
+       "      <td>304</td>\n",
+       "      <td>611</td>\n",
+       "      <td>408</td>\n",
+       "      <td>713</td>\n",
+       "      <td>104</td>\n",
+       "      <td>102</td>\n",
+       "      <td>red blood cell</td>\n",
+       "      <td>10608</td>\n",
+       "      <td>0.980769</td>\n",
+       "      <td>1.019608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/images/8d02117d-6c71-4e47-b50a-6cc8d5eb1d55.png</td>\n",
+       "      <td>198</td>\n",
+       "      <td>881</td>\n",
+       "      <td>312</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>114</td>\n",
+       "      <td>122</td>\n",
+       "      <td>red blood cell</td>\n",
+       "      <td>13908</td>\n",
+       "      <td>1.070175</td>\n",
+       "      <td>0.934426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80106</th>\n",
+       "      <td>/images/99e979d4-ee97-4d7f-9da6-00bead40db4d.png</td>\n",
+       "      <td>194</td>\n",
+       "      <td>771</td>\n",
+       "      <td>296</td>\n",
+       "      <td>895</td>\n",
+       "      <td>102</td>\n",
+       "      <td>124</td>\n",
+       "      <td>red blood cell</td>\n",
+       "      <td>12648</td>\n",
+       "      <td>1.215686</td>\n",
+       "      <td>0.822581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80107</th>\n",
+       "      <td>/images/99e979d4-ee97-4d7f-9da6-00bead40db4d.png</td>\n",
+       "      <td>1026</td>\n",
+       "      <td>929</td>\n",
+       "      <td>1130</td>\n",
+       "      <td>1036</td>\n",
+       "      <td>104</td>\n",
+       "      <td>107</td>\n",
+       "      <td>red blood cell</td>\n",
+       "      <td>11128</td>\n",
+       "      <td>1.028846</td>\n",
+       "      <td>0.971963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80109</th>\n",
+       "      <td>/images/99e979d4-ee97-4d7f-9da6-00bead40db4d.png</td>\n",
+       "      <td>308</td>\n",
+       "      <td>808</td>\n",
+       "      <td>406</td>\n",
+       "      <td>900</td>\n",
+       "      <td>98</td>\n",
+       "      <td>92</td>\n",
+       "      <td>trophozoite</td>\n",
+       "      <td>9016</td>\n",
+       "      <td>0.938776</td>\n",
+       "      <td>1.065217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80111</th>\n",
+       "      <td>/images/99e979d4-ee97-4d7f-9da6-00bead40db4d.png</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1260</td>\n",
+       "      <td>87</td>\n",
+       "      <td>1344</td>\n",
+       "      <td>87</td>\n",
+       "      <td>84</td>\n",
+       "      <td>red blood cell</td>\n",
+       "      <td>7308</td>\n",
+       "      <td>0.965517</td>\n",
+       "      <td>1.035714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80112</th>\n",
+       "      <td>/images/99e979d4-ee97-4d7f-9da6-00bead40db4d.png</td>\n",
+       "      <td>740</td>\n",
+       "      <td>0</td>\n",
+       "      <td>852</td>\n",
+       "      <td>100</td>\n",
+       "      <td>112</td>\n",
+       "      <td>100</td>\n",
+       "      <td>red blood cell</td>\n",
+       "      <td>11200</td>\n",
+       "      <td>0.892857</td>\n",
+       "      <td>1.120000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70751 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   path  min_r  min_c  max_r  \\\n",
+       "0      /images/8d02117d-6c71-4e47-b50a-6cc8d5eb1d55.png   1057   1440   1158   \n",
+       "1      /images/8d02117d-6c71-4e47-b50a-6cc8d5eb1d55.png    868   1303    971   \n",
+       "2      /images/8d02117d-6c71-4e47-b50a-6cc8d5eb1d55.png    578    900    689   \n",
+       "3      /images/8d02117d-6c71-4e47-b50a-6cc8d5eb1d55.png    304    611    408   \n",
+       "4      /images/8d02117d-6c71-4e47-b50a-6cc8d5eb1d55.png    198    881    312   \n",
+       "...                                                 ...    ...    ...    ...   \n",
+       "80106  /images/99e979d4-ee97-4d7f-9da6-00bead40db4d.png    194    771    296   \n",
+       "80107  /images/99e979d4-ee97-4d7f-9da6-00bead40db4d.png   1026    929   1130   \n",
+       "80109  /images/99e979d4-ee97-4d7f-9da6-00bead40db4d.png    308    808    406   \n",
+       "80111  /images/99e979d4-ee97-4d7f-9da6-00bead40db4d.png      0   1260     87   \n",
+       "80112  /images/99e979d4-ee97-4d7f-9da6-00bead40db4d.png    740      0    852   \n",
+       "\n",
+       "       max_c  r_len  c_len        category  box_area    c_by_r    r_by_c  \n",
+       "0       1540    101    100  red blood cell     10100  0.990099  1.010000  \n",
+       "1       1403    103    100  red blood cell     10300  0.970874  1.030000  \n",
+       "2       1008    111    108  red blood cell     11988  0.972973  1.027778  \n",
+       "3        713    104    102  red blood cell     10608  0.980769  1.019608  \n",
+       "4       1003    114    122  red blood cell     13908  1.070175  0.934426  \n",
+       "...      ...    ...    ...             ...       ...       ...       ...  \n",
+       "80106    895    102    124  red blood cell     12648  1.215686  0.822581  \n",
+       "80107   1036    104    107  red blood cell     11128  1.028846  0.971963  \n",
+       "80109    900     98     92     trophozoite      9016  0.938776  1.065217  \n",
+       "80111   1344     87     84  red blood cell      7308  0.965517  1.035714  \n",
+       "80112    100    112    100  red blood cell     11200  0.892857  1.120000  \n",
+       "\n",
+       "[70751 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# removing labelled leukocytes\n",
+    "\n",
+    "square_enough_good_size_no_leukocytes = square_enough_and_good_size.drop(square_enough_and_good_size[square_enough_and_good_size['category'] == 'leukocyte'].index)\n",
+    "square_enough_good_size_no_leukocytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4e7ae6e7-e428-453a-8cc8-5b9bc5b95743",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "red blood cell    0.974276\n",
+       "trophozoite       0.014035\n",
+       "difficult         0.004382\n",
+       "ring              0.004311\n",
+       "gametocyte        0.001512\n",
+       "schizont          0.001484\n",
+       "Name: category, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square_enough_good_size_no_leukocytes['category'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7cac2a4e-d7f9-4a72-baf9-5ea9dc75dd4d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>min_r</th>\n",
+       "      <th>min_c</th>\n",
+       "      <th>max_r</th>\n",
+       "      <th>max_c</th>\n",
+       "      <th>r_len</th>\n",
+       "      <th>c_len</th>\n",
+       "      <th>box_area</th>\n",
+       "      <th>c_by_r</th>\n",
+       "      <th>r_by_c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>70751.00000</td>\n",
+       "      <td>70751.000000</td>\n",
+       "      <td>70751.000000</td>\n",
+       "      <td>70751.00000</td>\n",
+       "      <td>70751.000000</td>\n",
+       "      <td>70751.000000</td>\n",
+       "      <td>70751.000000</td>\n",
+       "      <td>70751.000000</td>\n",
+       "      <td>70751.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>545.66122</td>\n",
+       "      <td>746.107094</td>\n",
+       "      <td>653.567370</td>\n",
+       "      <td>854.52983</td>\n",
+       "      <td>107.906150</td>\n",
+       "      <td>108.422736</td>\n",
+       "      <td>11829.567427</td>\n",
+       "      <td>1.009679</td>\n",
+       "      <td>0.999678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>317.84451</td>\n",
+       "      <td>432.467275</td>\n",
+       "      <td>317.858963</td>\n",
+       "      <td>432.53070</td>\n",
+       "      <td>13.658502</td>\n",
+       "      <td>13.525589</td>\n",
+       "      <td>2733.873337</td>\n",
+       "      <td>0.097341</td>\n",
+       "      <td>0.096778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>69.00000</td>\n",
+       "      <td>57.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>3933.000000</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>270.00000</td>\n",
+       "      <td>371.000000</td>\n",
+       "      <td>379.000000</td>\n",
+       "      <td>480.00000</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>9810.000000</td>\n",
+       "      <td>0.941176</td>\n",
+       "      <td>0.930693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>545.00000</td>\n",
+       "      <td>746.000000</td>\n",
+       "      <td>653.000000</td>\n",
+       "      <td>855.00000</td>\n",
+       "      <td>107.000000</td>\n",
+       "      <td>108.000000</td>\n",
+       "      <td>11655.000000</td>\n",
+       "      <td>1.008000</td>\n",
+       "      <td>0.992063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>821.00000</td>\n",
+       "      <td>1119.000000</td>\n",
+       "      <td>928.000000</td>\n",
+       "      <td>1228.00000</td>\n",
+       "      <td>117.000000</td>\n",
+       "      <td>118.000000</td>\n",
+       "      <td>13673.000000</td>\n",
+       "      <td>1.074468</td>\n",
+       "      <td>1.062500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1129.00000</td>\n",
+       "      <td>1531.000000</td>\n",
+       "      <td>1200.000000</td>\n",
+       "      <td>1600.00000</td>\n",
+       "      <td>173.000000</td>\n",
+       "      <td>174.000000</td>\n",
+       "      <td>24963.000000</td>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>1.250000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             min_r         min_c         max_r        max_c         r_len  \\\n",
+       "count  70751.00000  70751.000000  70751.000000  70751.00000  70751.000000   \n",
+       "mean     545.66122    746.107094    653.567370    854.52983    107.906150   \n",
+       "std      317.84451    432.467275    317.858963    432.53070     13.658502   \n",
+       "min        0.00000      0.000000     70.000000     69.00000     57.000000   \n",
+       "25%      270.00000    371.000000    379.000000    480.00000     98.000000   \n",
+       "50%      545.00000    746.000000    653.000000    855.00000    107.000000   \n",
+       "75%      821.00000   1119.000000    928.000000   1228.00000    117.000000   \n",
+       "max     1129.00000   1531.000000   1200.000000   1600.00000    173.000000   \n",
+       "\n",
+       "              c_len      box_area        c_by_r        r_by_c  \n",
+       "count  70751.000000  70751.000000  70751.000000  70751.000000  \n",
+       "mean     108.422736  11829.567427      1.009679      0.999678  \n",
+       "std       13.525589   2733.873337      0.097341      0.096778  \n",
+       "min       60.000000   3933.000000      0.800000      0.800000  \n",
+       "25%       99.000000   9810.000000      0.941176      0.930693  \n",
+       "50%      108.000000  11655.000000      1.008000      0.992063  \n",
+       "75%      118.000000  13673.000000      1.074468      1.062500  \n",
+       "max      174.000000  24963.000000      1.250000      1.250000  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square_enough_good_size_no_leukocytes.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ae31516-5b5e-4c10-9cc5-e20f22512f70",
    "metadata": {},
    "outputs": [],
    "source": []
