--- a/notebooks/ap_padding_resize_comp.ipynb
+++ b/notebooks/ap_padding_resize_comp.ipynb
@@ -588,7 +588,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lewagon",
    "language": "python",
    "name": "python3"
   },
@@ -603,6 +603,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e9cd7929e3fd109b3b39cc1ceb7ddf8342bd42a7939b22dcad28b5027279d161"
+   }
   }
  },
  "nbformat": 4,
