model that gave average results, limited changes, some cleaning up of python files

--- a/notebooks/mw_model_test_wed.ipynb
+++ b/notebooks/mw_model_test_wed.ipynb
@@ -538,7 +538,7 @@
     "\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "from tensorflow.keras import models, Sequential, layers, regularizers\n",
+    "from tensorflow.keras import  Sequential, layers, regularizers\n",
     "\n",
     "# from keras.layers import BatchNormalization\n",
     "\n",
