--- a/notebooks/resnet.ipynb
+++ b/notebooks/resnet.ipynb
@@ -623,7 +623,7 @@
    "uri": "gcr.io/deeplearning-platform-release/pytorch-gpu.1-13:m103"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "malari_eye",
    "language": "python",
    "name": "python3"
   },
@@ -638,6 +638,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "165f4dab68e6e146aa3f5b4ac8911e98511d741c3b6af871ae73b9f69263bd99"
+   }
   }
  },
  "nbformat": 4,
